--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
+    "desktop-idle": "^1.3.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "https": "^1.0.0",
