--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "bootstrap": "^4.6.0",
     "desktop-idle": "^1.3.0",
     "ejs": "^3.1.6",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "https": "^1.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.0",
-    "nodemon": "^2.0.7",
-    "email-validator": "^2.0.4"
+    "nodemon": "^2.0.7"
   }
 }
