--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "https": "^1.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "passport": "^0.4.1"
   }
 }
